@@ -1,8 +1,8 @@
-.\"	$NetBSD: bozohttpd.8,v 1.46.4.7 2016/12/23 07:42:09 snj Exp $
+.\"	$NetBSD: bozohttpd.8,v 1.46.4.8 2017/02/12 22:07:17 snj Exp $
 .\"
 .\"	$eterna: bozohttpd.8,v 1.101 2011/11/18 01:25:11 mrg Exp $
 .\"
-.\" Copyright (c) 1997-2016 Matthew R. Green
+.\" Copyright (c) 1997-2017 Matthew R. Green
 .\" All rights reserved.
 .\"
 .\" Redistribution and use in source and binary forms, with or without
@@ -26,7 +26,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd December 11, 2016
+.Dd February 1, 2017
 .Dt BOZOHTTPD 8
 .Os
 .Sh NAME
@@ -190,7 +190,7 @@ when a URL in the form
 is being accessed.
 The function is passed three tables as arguments, the server
 environment, the request headers, and the decoded query string
-plus any data that was send as application/x-www-form-urlencoded.
+plus any data that was sent as application/x-www-form-urlencoded.
 .It Fl M Ar suffix type encoding encoding11
 Adds a new entry to the table that converts file suffixes to
 content type and encoding.
@@ -384,7 +384,7 @@ user transformations (NO_USER_SUPPORT),
 directory index support (NO_DIRINDEX_SUPPORT),
 daemon mode support (NO_DAEMON_MODE),
 dynamic MIME content (NO_DYNAMIC_CONTENT),
-Lua suport (NO_LUA_SUPPORT),
+Lua support (NO_LUA_SUPPORT),
 and SSL support (NO_SSL_SUPPORT)
 by defining the listed macros when building
 .Nm .
@@ -446,7 +446,7 @@ with
 on the compiler command line.
 .Ss COMPRESSION
 .Nm
-supports a very basic form compression.
+supports a very basic form of compression.
 .Nm
 will serve the requested file postpended with
 .Dq Pa .gz
@@ -531,7 +531,7 @@ The focus has always been simplicity and security, with minimal features
 and regular code audits.
 This manual documents
 .Nm
-version 20160720.
+version 20170201.
 .Sh AUTHORS
 .An -nosplit
 .Nm
@@ -630,6 +630,10 @@ provided some clean up for memory leaks
 .An Johnny Lam
 .Aq Mt jlam@NetBSD.org
 provided man page fixes
+.It
+.An Dennis Lindroos
+.Aq Mt denafcm@gmail.com
+provided a cgi-bin fix
 .It
 .An Julio Merino
 .Aq Mt jmmv@NetBSD.org
