@@ -1,7 +1,12 @@
-$NetBSD: CHANGES,v 1.19.2.4 2016/12/23 07:42:09 snj Exp $
+$NetBSD: CHANGES,v 1.19.2.5 2017/02/12 22:07:17 snj Exp $
+
+changes in bozohttpd 20170201:
+	o  fix an infinite loop in cgi processing
+	o  fixes and clean up for the testsuite
+	o  no longer sends encoding header for compressed formats
 
 changes in bozohttpd 20160517:
-	o add a bozo_get_version() function which returns the version number
+	o  add a bozo_get_version() function which returns the version number
 
 changes in bozohttpd 20160415:
 	o  add search-word support for CGI
